--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:background="#0C0B0B"
+android:background="#23374d"
     >
 
 <androidx.constraintlayout.widget.Guideline
@@ -45,7 +45,7 @@ android:background="#0C0B0B"
 
 
     android:hint="   Username"
-    android:textColorHint="@color/colorAccent"
+    android:textColorHint="@color/colorName"
     app:boxStrokeColor="@color/colorAccent"
     app:layout_constraintEnd_toStartOf="@+id/guideline_right"
     app:layout_constraintHorizontal_bias="0.0"
@@ -66,13 +66,12 @@ android:background="#0C0B0B"
 
 <com.google.android.material.textfield.TextInputLayout
     android:id="@+id/etPasswordLayout"
-    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    style="@style/LoginTextInputLayoutStyle"
     android:layout_width="0dp"
     android:layout_height="70dp"
     android:layout_marginTop="36dp"
-
     android:hint="   Password"
-    android:textColorHint="@color/colorAccent"
+    android:textColorHint="@color/colorName"
     app:boxStrokeColor="@color/colorAccent"
     app:layout_constraintEnd_toStartOf="@+id/guideline_right"
     app:layout_constraintHorizontal_bias="1.0"
@@ -99,7 +98,7 @@ android:background="#0C0B0B"
     android:layout_width="0dp"
     android:layout_height="wrap_content"
     android:layout_marginTop="55dp"
-    android:background="#EE9B9B"
+    android:background="#ce2e6c"
     android:padding="16dp"
     android:text="Login"
     android:textAllCaps="false"
@@ -125,6 +124,7 @@ android:background="#0C0B0B"
         app:layout_constraintEnd_toStartOf="@+id/guideline_right"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/login"
-        app:layout_constraintTop_toBottomOf="@id/login" />
+        app:layout_constraintTop_toBottomOf="@id/login"
+        android:visibility="gone"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
