--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,5 +11,19 @@
         <item name="boxStrokeColor">#fff</item>
         <item name="boxStrokeWidth">2dp</item>
     </style>
+    <style name="AddTeamName" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="boxStrokeColor">#E2487D</item>
+        <item name="boxStrokeWidth">2dp</item>
+    </style>
+
+
+    <style name="fontForTitle">
+        <item name="android:textStyle">italic</item>
+        <item name="android:fontFamily">Playfair</item>
+        <item name="android:textColor">#333333</item>
+        <item name="android:textSize">32sp</item>
+        <item name="android:padding">2dip</item>
+    </style>
+
 
 </resources>
