--- a/app/src/main/res/layout/fragment_people_list_event.xml
+++ b/app/src/main/res/layout/fragment_people_list_event.xml
@@ -20,9 +20,10 @@ android:id="@+id/upperFrame">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/titlee"
-        android:layout_centerHorizontal="true"
-
-        />
+        android:text="chec"
+        android:textSize="30dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="3dp" />
 
     <ImageButton
         android:layout_marginTop="4dp"
@@ -46,24 +47,26 @@ android:id="@+id/upperFrame">
 
 
 </LinearLayout>
-<LinearLayout
-    android:layout_width="wrap_content"
+<RelativeLayout
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <Button
-        android:id="@+id/submit"
-        android:layout_width="wrap_content"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-
+        android:text="Add"
+        android:id="@+id/add"
+        android:layout_alignParentLeft="true"
+        />
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="80dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
         android:text="Submit"
         android:theme="@style/MaterialButton.Pink" />
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add More People"
-        android:id="@+id/add"
-        />
-</LinearLayout>
+
+</RelativeLayout>
 
 
 </LinearLayout>
