--- a/app/src/main/res/layout/fragment_people_list_event.xml
+++ b/app/src/main/res/layout/fragment_people_list_event.xml
@@ -14,19 +14,21 @@ android:id="@+id/upperFrame">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="0">
+    android:layout_weight="0"
+    android:layout_marginBottom="2dp">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/titlee"
-        android:text="chec"
-        android:textSize="30dp"
+
+        android:textSize="25dp"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="3dp" />
+        android:layout_marginLeft="4dp"
+        />
 
     <ImageButton
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="6dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_close_black_24dp"
@@ -47,26 +49,29 @@ android:id="@+id/upperFrame">
 
 
 </LinearLayout>
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<LinearLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="horizontal">
     <Button
-        android:layout_width="80dp"
+        android:layout_width="0dp"
+        android:layout_weight="0.5"
         android:layout_height="wrap_content"
         android:text="Add"
         android:id="@+id/add"
         android:layout_alignParentLeft="true"
+
         />
     <Button
         android:id="@+id/submit"
-        android:layout_width="80dp"
+        android:layout_width="0dp"
+        android:layout_weight="0.5"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:text="Submit"
         android:theme="@style/MaterialButton.Pink" />
 
-</RelativeLayout>
+</LinearLayout>
 
 
 </LinearLayout>
