Loaders and back

--- a/app/src/main/res/layout/fragment_people_list_event.xml
+++ b/app/src/main/res/layout/fragment_people_list_event.xml
@@ -60,6 +60,7 @@ android:id="@+id/upperFrame">
         android:text="Add"
         android:id="@+id/add"
         android:layout_alignParentLeft="true"
+        android:theme="@style/MaterialButton.Pink"
 
         />
     <Button
